[package]
name = "fire"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.70"
nalgebra-glm = "0.19.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

[dependencies.web-sys]
version = "0.3.70"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
]

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]
